syntax = "proto3";
option go_package="gen/go/healthcheck";

package service.healthCheck;
import "types/health_check.proto";
import "types/google/api/annotations.proto";

service HealthCheckService {
    rpc healthCheck(type.health_check.HealthCheckRequest) returns (type.health_check.HealthCheckResponse) {
        option (google.api.http) = {
            get:"/api/v1/health"
        };
    };
}