syntax="proto3";
package type.health_check;
option go_package="gen/go/healthcheck";

message HealthCheckRequest {}

message HealthCheckResponse {
    int32 status = 1;
    bool OK = 2;
}